--- a/website/templates/profile/profile_api.html
+++ b/website/templates/profile/profile_api.html
@@ -4,6 +4,11 @@
 {% if not user.api_keys %}
   <form method="POST">
     <h5 align="left">Upload Api Key</h5>
+    <p>
+      To start using Covered, you'll need an OpenAI API key. Follow the steps below to get your API key:
+      <br>
+      <a href="https://www.openai.com/" target="_blank">Visit the OpenAI website</a>
+    </p>
       <div class="form-group">
         <input type="text" class="form-control" id="api_key" name="api_key" placeholder="Enter API Key here..."/>
       </div>
