formatted datetime added

--- a/website/templates/history/history_data_table.html
+++ b/website/templates/history/history_data_table.html
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </td>
-                    <td>{{ history_entry.timestamp }}</td>
+                    <td>{{ formatted_date }}</td>
                     <td class="px-1">
                         <button type="button" class="btn btn-danger" onclick="deleteApplication({{ history_entry.id }})">
                             <i class="bi bi-x"></i>
