--- a/website/templates/history/history_data_table.html
+++ b/website/templates/history/history_data_table.html
@@ -15,6 +15,18 @@
                 <th></th>
                 <th class="vertical-text">Delete</th>
             </tr>
+            <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th colspan="3" class="subheading">Progress</th>
+                <th></th>
+                <th></th>
+            </tr>
         </thead>
         <tbody>
             {% for history_entry in job_history_data %}
@@ -23,10 +35,10 @@
                     <td>{{ history_entry.position }}</td>
                     <td>{{ history_entry.recruiters_name }}</td>
                     <td class="px-1">
-                        <button class="btn btn-primary popup-button" data-toggle="modal" data-target="#myModal-{{ result_dict }}-data">
+                        <button class="btn btn-primary popup-button" data-toggle="modal" data-target="#myModal-{{ history_entry.result_dict }}-data">
                             <i class="bi bi-file-earmark-font"></i>
                         </button>
-                        <div class="modal fade" id="myModal-{{ result_dict }}-data" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="myModal-{{ history_entry.result_dict }}-data" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -38,28 +50,28 @@
                                     <div class="modal-body">
                                         <h6>Technical Skills:</h6>
                                         <ul>
-                                            {% for skill in result_dict['Technical Skills'] %}
+                                            {% for skill in history_entry.result_dict['Technical Skills'] %}
                                                 <li>{{ skill }}</li>
                                             {% endfor %}
                                         </ul>
                     
                                         <h6>Requirements:</h6>
                                         <ul>
-                                            {% for requirement in result_dict['Requirements'] %}
+                                            {% for requirement in history_entry.result_dict['Requirements'] %}
                                                 <li>{{ requirement }}</li>
                                             {% endfor %}
                                         </ul>
                     
                                         <h6>Qualifications:</h6>
                                         <ul>
-                                            {% for qualification in result_dict['Qualifications'] %}
+                                            {% for qualification in history_entry.result_dict['Qualifications'] %}
                                                 <li>{{ qualification }}</li>
                                             {% endfor %}
                                         </ul>
                     
                                         <h6>ATS Keywords:</h6>
                                         <ul>
-                                            {% for keyword in result_dict['ATS keyword'] %}
+                                            {% for keyword in history_entry.result_dict['ATS keyword'] %}
                                                 <li>{{ keyword }}</li>
                                             {% endfor %}
                                         </ul>
@@ -108,7 +120,7 @@
                             </div>
                         </div>
                     </td>
-                    <td>{{ formatted_date }}</td>
+                    <td>{{ history_entry.formatted_date }}</td>
                     <td class="px-1" >
                         <button type="button" class="btn btn-primary">
                             <i class="bi bi-check"></i>
