--- a/website/templates/history/history_data_table.html
+++ b/website/templates/history/history_data_table.html
@@ -30,9 +30,9 @@
         </thead>
         <tbody>
             {% for history_entry in job_history_data %}
-                <tr id="row{{ history_entry.id }}" class="{% if history_entry.rejected %}rejected{% endif %}">
-                    <td>{{ history_entry.company_name }}</td>
-                    <td>{{ history_entry.position }}</td>
+                <tr id="row{{ history_entry.id }}" class="{% if history_entry.rejested == 1 %}table-dark alert-light{% endif %}">
+                    <td style="white-space: nowrap;"><span>{{ history_entry.company_name }}</span></td>
+                    <td style="white-space: nowrap;"><span>{{ history_entry.position }}</span></td>
                     <td>{{ history_entry.recruiters_name }}</td>
                     <td class="px-1">
                         <button class="btn btn-primary popup-button" data-toggle="modal" data-target="#myModal-{{ history_entry.result_dict }}-data">
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                     </td>
-                    <td>{{ history_entry.formatted_date }}</td>
+                    <td style="white-space: nowrap;"><span>{{ history_entry.formatted_date }}</span></td>
                     <td class="px-1" >
                         <button type="button" class="btn {% if history_entry.contact_viewed == 1 %}btn-primary{% else %}btn-light{% endif %}" onclick="trueContacted({{ history_entry.id }})">
                             <i id="icon{{ history_entry.id }}" class="bi {% if history_entry.contact_viewed == 1 %}bi-check{% else %}bi-x{% endif %}"></i>
@@ -137,7 +137,7 @@
                         </button>
                     </td>
                     <td class="px-1">
-                        <button type="button" class="btn btn-warning" onclick="rejectRow({{ history_entry.id }}, {{ history_entry.rejected }})">
+                        <button type="button" class="btn {% if history_entry.rejested == 1 %}btn-warning{% else %}btn-outline-warning{% endif %}" onclick="rejectRow({{ history_entry.id }})">
                             Rejected
                         </button>
                     </td>
@@ -155,20 +155,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/history.css') }}">
 
 <script>
-    function rejectRow(id, isRejected) {
-        console.log(`Rejecting row ${id}`);
-        const row = document.getElementById(`row${id}`);
-        if (row) {
-            if (isRejected) {
-                console.log('Row was rejected, removing "rejected" class');
-                row.classList.remove('rejected');
-            } else {
-                console.log('Row was not rejected, adding "rejected" class');
-                row.classList.add('rejected');
-            }
-            isRejected = !isRejected;
-        }
-    }
     
     document.addEventListener("DOMContentLoaded", function() {
         const popupButtons = document.querySelectorAll(".popup-button");
@@ -218,7 +204,7 @@
                     window.location.href = "/history";
                 });
             });
-    }
+        }
 
     function trueTech(historyId) {
 
@@ -238,17 +224,15 @@
                     window.location.href = "/history";
                 });
             });
-    }
+        }
 
     function trueInterview(historyId) {
-
         fetch(`/get-interviewed-state/${historyId}`)
             .then((response) => response.json())
             .then((data) => {
                 const contactedState = data.contactedState;
                 const updatedState = !contactedState;
-                
-                console.log(data.contactedState)
+
                 fetch("/true-interviewed", {
                     method: "POST",
                     body: JSON.stringify({ historyId: historyId, contactedState: updatedState }),
@@ -259,6 +243,26 @@
                     window.location.href = "/history";
                 });
             });
+        }
+
+    function rejectRow(historyId) {
+    fetch(`/get-rejected-state/${historyId}`)
+        .then((response) => response.json())
+        .then((data) => {
+            const contactedState = data.contactedState;
+            const updatedState = !contactedState;
+
+            fetch("/true-rejected", {
+                method: "POST",
+                body: JSON.stringify({ historyId: historyId, contactedState: updatedState }),
+                headers: {
+                    "Content-Type": "application/json"
+                }
+            }).then((_res) => {
+                window.location.href = "/history";
+            });
+        });
     }
+
 
 </script>
