--- a/website/templates/history/history_data_table.html
+++ b/website/templates/history/history_data_table.html
@@ -35,7 +35,7 @@
                     <td style="white-space: nowrap;"><span>{{ history_entry.position }}</span></td>
                     <td>{{ history_entry.recruiters_name }}</td>
                     <td class="px-1">
-                        <button class="btn btn-primary popup-button" data-toggle="modal" data-target="#myModal-{{ history_entry.result_dict }}-data">
+                        <button class="btn {% if history_entry.rejested == 1 %}btn-outline-secondary{% else %}btn-primary{% endif %}" data-toggle="modal" data-target="#myModal-{{ history_entry.result_dict }}-data">
                             <i class="bi bi-file-earmark-font"></i>
                         </button>
                         <div class="modal fade" id="myModal-{{ history_entry.result_dict }}-data" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -81,7 +81,7 @@
                         </div>
                     </td>   
                         <td class="px-1">
-                        <button class="btn btn-primary popup-button" data-toggle="modal" data-target="#myModal-{{ history_entry.id }}-cl">
+                        <button class="btn {% if history_entry.rejested == 1 %}btn-outline-secondary{% else %}btn-primary{% endif %}" data-toggle="modal" data-target="#myModal-{{ history_entry.id }}-cl">
                             <i class="bi bi-file-earmark-font"></i>
                         </button>
                         <div class="modal fade" id="myModal-{{ history_entry.id }}-cl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -101,7 +101,7 @@
                         </div>
                     </td>
                     <td class="px-1">
-                        <button class="btn btn-primary popup-button" data-toggle="modal" data-target="#myModal-{{ history_entry.id }}-jobad">
+                        <button class="btn {% if history_entry.rejested == 1 %}btn-outline-secondary{% else %}btn-primary{% endif %}" data-toggle="modal" data-target="#myModal-{{ history_entry.id }}-jobad">
                             <i class="bi bi-file-earmark-font"></i>
                         </button>
                         <div class="modal fade" id="myModal-{{ history_entry.id }}-jobad" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -137,12 +137,12 @@
                         </button>
                     </td>
                     <td class="px-1">
-                        <button type="button" class="btn {% if history_entry.rejested == 1 %}btn-warning{% else %}btn-outline-warning{% endif %}" onclick="rejectRow({{ history_entry.id }})">
+                        <button type="button" class="btn {% if history_entry.rejested == 1 %}btn-outline-secondary{% else %}btn-outline-warning{% endif %}" onclick="rejectRow({{ history_entry.id }})">
                             Rejected
                         </button>
                     </td>
                     <td class="px-1" >
-                        <button type="button" class="btn btn-danger" onclick="deleteApplication({{ history_entry.id }})">
+                        <button type="button" class="btn {% if history_entry.rejested == 1 %}btn-outline-secondary{% else %}btn-danger{% endif %}" onclick="deleteApplication({{ history_entry.id }})">
                             <i class="bi bi-x"></i>
                         </button>
                     </td>
